# ai-agent-app

./: .env.example  .gitignore  README.md  ecosystem.config.js  fix_tests.py  fix_tests_3.py  fix_tests_4.py  pyproject.toml  requirements.txt  test_agent_contact.py  test_contact.py  test_countries.py  tmp.py
.agents/workflows/: create-matter.md
demo-ui/: app.js  index.html  style.css
docs/: auth_migration_history.md  context_awareness.md
scratch/: diagnose_redis_infra.py
src/: agent_manager.py  config.py  constants.py  logger.py  main.py  prompts.py  prompts_3_MAR_26.py  tools.py  utils.py
src/agents/: __init__.py  calendar_agent.py  client_creation_agent.py  core_agent.py  memory_agent.py  rag_agent.py
src/dynamic_schema/: __init__.py  client_schema.py  contact_schema.py  event_schema.py  (+3 more)
tests/: conftest.py  test_404_auth_trigger.py  test_agent.py  test_api_key_auth.py  test_calendar_conflicts.py  test_client_glitch_guard.py  test_client_workflow_prod.py  test_contact_workflow_fixes.py  test_context_awareness_suite.py  test_existing_user_handshake.py  test_flow.py  test_grant_token_integration.py  test_lookup_link_pattern.py  test_matter_workflow_prod.py  test_minimal_core_event.py  test_mm_core_event_workflow.py  test_production_event_creation.py  test_production_verification.py  test_rehydration_regression.py  test_remote_core_services.py  test_remote_routing_safety.py  test_search_contact_by_email.py  test_standardization_and_privacy.py  test_workflow_cross_pollination.py  test_workflow_gating.py
tmp/: live_test_server.py  test_stream.py
(+7 files in other folders)
