[project]
name = "matterminer-agentic-ai"
version = "1.0.0"
description = "Orchestration layer for Legal Calendar Operations with strict Tenant isolation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.*",
    "uvicorn[standard]==0.22.*",
    "openai==2.26.*",
    "httpx==0.28.*",
    "python-dotenv==1.0.*",
    "pydantic-settings==2.13.*",
    "sentry-sdk==2.54.*",
    "PyJWT==2.12.*",
    "dateparser==1.3.*"
]

[tool.pyright]
include = ["src"]
extraPaths = ["."]
typeCheckingMode = "basic"

[tool.pyre]
source_directories = ["."]
search_path = ["src"]
exclude = [
    "**/node_modules/**",
    ".*/venv/.*",
    ".*/__pycache__/.*",
    "tmp/**"
]
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tmp", "node_modules", ".git"]
asyncio_mode = "strict"
